--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,16 +1,30 @@
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.first_row {
+    display: flex;
+    justify-content: flex-start;
+    flex-flow: row wrap; 
+    height: 100vh;
+    margin: 0;
+}
+
 .hero_section {
     background-image: url("../images/HERO1BW.jpg");
     background-attachment: fixed;
     background-position: left;
-    background-size: cover;
+    background-size: contain;
+    width: 40vw;
+    margin: 0;
 }
 
 .header {
-    position: fixed;
-    width: 100%;
-    top: 0%;
-    display: inline-block;
+    width: 60vw;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 0;
+    text-align: center;
 }
 
 .brandon-krussow {
@@ -18,8 +32,6 @@
 }
 
 .header nav {
-    float: right;
     padding-top: 15px;
-    margin-right: 15px;
     font-size: 15px;
 }
