--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -24,14 +24,21 @@ body {
     width: 60vw;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: 0;
-    text-align: center;
 }
 
 .brandon-krussow {
     font-size: 45px;
+    padding-left: 5vh;
+}
+
+li {
+    display: inline;
+    margin-right: auto;
 }
 
 .header nav {
+    display:inline;
+    margin-right: auto;
     padding-top: 15px;
     font-size: 15px;
 }
