--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -16,11 +16,14 @@ body {
     background-attachment: fixed;
     background-position: left;
     background-size: contain;
+    background-repeat: no-repeat;
     width: 40vw;
     margin: 0;
+    flex-grow: 1;
 }
 
 .header {
+    display: inline-flexbox;
     width: 60vw;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: 0;
@@ -28,17 +31,27 @@ body {
 
 .brandon-krussow {
     font-size: 45px;
-    padding-left: 5vh;
-}
-
-li {
-    display: inline;
-    margin-right: auto;
+    padding-left: 2vh;
+    padding-right: 6vh;
+    display: inline-block;
 }
 
 .header nav {
-    display:inline;
-    margin-right: auto;
-    padding-top: 15px;
+    display: inline-block;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 15px;
 }
+
+li {
+    display: inline-block;
+    margin-right: 2vh;
+    list-style-type: none;
+    padding-top: 2vh;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+    padding-right: 1vh;
+}
+
