--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,45 +1,27 @@
-body {
-    margin: 0;
-    padding: 0;
-}
-
-.first_row {
-    display: flex;
-    justify-content: flex-start;
-    flex-flow: row wrap; 
-    height: 100vh;
-    margin: 0;
-}
-
-.hero_section {
+.hero {
+    width: 700px;
+    height: 900px;
+    position:fixed;
+    border: 5px solid black;    
     background-image: url("../images/HERO1BW.jpg");
-    background-attachment: fixed;
-    background-position: left;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
-    width: 40vw;
-    margin: 0;
-    flex-grow: 1;
 }
 
-.header {
-    display: inline-flexbox;
-    width: 60vw;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin: 0;
+.page-content {
+    margin-left: 40%;
 }
 
 .brandon-krussow {
-    font-size: 45px;
+    font-size: 50px;
     padding-left: 2vh;
     padding-right: 6vh;
     display: inline-block;
 }
 
-.header nav {
+nav {
     display: inline-block;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 15px;
+    font-size: 25px;
 }
 
 li {
@@ -55,3 +37,38 @@ a {
     padding-right: 1vh;
 }
 
+a:hover {
+    background-color: pink;
+}
+
+.philosophy-1 {
+    padding-top: 20vh;
+    padding-bottom: 15vh;
+    padding-left: 40vh;
+    font-style: italic;
+    font-size: 25px;
+}
+
+.philosophy-2 {
+    padding-top: 20vh;
+    padding-bottom: 15vh;
+    padding-left: 40vh;
+    font-style: italic;
+    font-size: 25px;
+}
+
+.aboutsection {
+    padding-bottom: 15vh;
+}
+
+.worksection {
+    padding-bottom: 15vh;
+}
+
+.resumesection {
+    padding-bottom: 15vh;
+}
+
+.contactsection {
+    padding-bottom: 15vh;
+}
