--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -14,6 +14,10 @@
     padding-right: 2vw;
 }
 
+.header {
+    text-align: center;
+}
+
 .brandon-krussow {
     font-size: 50px;
     padding-left: 2vh;
