--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -45,6 +45,7 @@ a {
 
 a:hover {
     background-color: pink;
+    box-shadow: 5px 5px;
 }
 
 .philosophy-1 {
@@ -76,5 +77,9 @@ a:hover {
 }
 
 .contactsection {
-    padding-bottom: 15vh;
+    padding-bottom: 5vh;
+}
+
+.footer {
+    text-align: center;
 }
