--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,27 +41,41 @@ a {
     color: black;
     text-decoration: none;
     padding-right: 1vh;
+    opacity: .5;
 }
 
 a:hover {
     background-color: pink;
-    box-shadow: 5px 5px;
+    -moz-box-flex: 5px 5px;
+    opacity: 1.0;
+}
+
+@keyframes appear {
+    from {color:white}
+    to {color:black}
 }
 
 .philosophy-1 {
-    padding-top: 20vh;
-    padding-bottom: 15vh;
+    padding-top: 25vh;
+    padding-bottom: 10vh;
     padding-left: 40vh;
+    color: white;
     font-style: italic;
     font-size: 25px;
+    animation-name: appear; 
+    animation-duration: 3s;
 }
 
 .philosophy-2 {
-    padding-top: 20vh;
-    padding-bottom: 15vh;
+    padding-top: 10vh;
+    padding-bottom: 25vh;
     padding-left: 40vh;
+    color: white;
     font-style: italic;
     font-size: 25px;
+    animation-name: appear;
+    animation-duration: 3s;
+    animation-delay: 3s;
 }
 
 .aboutsection {
