--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     margin-left: 0;
+    border-radius: 8px;
 }
 
 .page-content {
@@ -94,8 +95,10 @@ a:hover {
     display: inline-block;
     background-image: url("../images/regionals.jpg"), url("../images/ptq.jpg"), url("../images/protour.jpg");
     background-repeat: no-repeat;
+    background-position: left, center, right;
     background-size: 350px, 350px, 350px;
     padding-top: 2vh;
+    border-radius: 8px;
 }
 
 .worksection {
