--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ a:hover {
     font-size: 20px;
 }
 
-.banner {
+.banner1 {
     height: 200px;
     width: 1050px;
     display: inline-block;
@@ -102,13 +102,24 @@ a:hover {
 }
 
 .worksection {
+    padding-top: 15vh;
     padding-bottom: 15vh;
     font-size: 20px;
 }
 
 .m1img {
     height: 650px;
-    width: 350px;
+    width: 335px;
+}
+
+.m2img {
+    height: 650px;
+    width: 335px;
+}
+
+.m3img {
+    height: 650px;
+    width: 335px;
 }
 
 .resumesection {
