--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@
     margin-left: 40%;
     padding-left: 2vw;
     padding-right: 2vw;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .header {
