--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,58 +7,94 @@
     background-size: cover;
     background-repeat: no-repeat;
     margin-left: 0;
-    border-radius: 15px;
 }
+
 /*Style and position of the main content*/
 .page-content {
+    position:fixed;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin-left: 40%;
-    padding-left: 2vw;
-    padding-right: 1vw;
+    height: 100vh;
+    width: 60vw;
+    margin-right: 0;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    border: 1px solid #000;
+    overflow: auto;
 }
 
 .header {
-    text-align: center;
+    position: fixed;
+    text-align: center;  
+    width: 50vw;
+    top: 0%;
+    left: 44.59%;
+    border: 1px solid #000;
 }
-/*Style and position of the main heading*/
+
+.footer {
+    position: fixed;
+    text-align: center;
+    width: 50vw;
+    bottom: 0%;;
+    left: 44.59%;
+    border: 1px solid #000;
+}
+
+/*Main heading(s)*/
 .brandon-krussow {
-    font-size: 50px;
+    font-size: 5vh;
     font-weight: bolder;
-    padding-left: 2vh;
-    padding-right: 6vh;
     display: inline-block;
 }
 
-/*Style and position of the About section*/
-.aboutsection {
-    padding-bottom: 2vh;
-    font-size: 20px;
+.Contact {
+    font-size: 5vh;
+    font-weight: bolder;
+    display: inline-block;
 }
+
+.templateContainer {
+    position:fixed;
+    margin-top: 20vh;
+    margin-bottom: 20vh;
+    left: 44.59%;
+    width: 50vw;
+    height: 64.25vh;
+    border: 1px solid #000;
+    overflow: auto;
+}
+
+.effectClass {
+    padding-top: 1vh;
+    padding-bottom: 3vh;
+}
+
 /*Style and position of the image banner*/
 .banner1 {
-    height: 200px;
+    height: 40vh;
     width: 100%;
-    max-width: 1050px;
+    padding-top: 10vh;
     display: inline-block;
-    background-image: url("../images/regionals.jpg"), url("../images/ptq.jpg"), url("../images/protour.jpg");
+    background-image: url("../images/weightroom.jpg"), url("../images/cycling.jpg"), url("../images/playerstour.jpg");
     background-repeat: no-repeat;
     background-position: left, center, right;
-    background-size: 350px, 350px, 350px;
-    padding-top: 2vh;
-    border-radius: 8px;
+    background-size: 300px, 300px, 300px;
+    border: 1px solid #000;
 }
 
 .image-container {
-    width: 55vw; /* Define the width of the container as needed */
-    height: 60vh; /* Define the height of the container as needed */
+    width: 55vw; 
+    height: 60vh; 
     display: flex;
 }
 
 .image-container img {
-    flex: 1; /* Make the images fill the available space equally */
+    flex: 1; 
     object-fit: cover;
-    max-width: 100%; /* Limit the image's width to the container width */
-    max-height: 100%; /* Limit the image's height to the container height */
+    max-width: 100%; 
+    max-height: 100%; 
 }
 
 /*Style and position of the Resume section*/
@@ -70,16 +106,7 @@
 .resumeimg {
     height: 650px;
 }
-/*Style and position of the Contact section*/
-.contactsection {
-    padding-bottom: 5vh;
-    font-size: 20px;
-}
 
-.footer {
-    text-align: center;
-    padding-bottom: 5vh;
-}
 /*Dynamic response to smaller screen size*/
 @media screen and (max-width: 768px) {
     .hero {
@@ -201,14 +228,14 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 1vh;
 }
 
 .switch {
     position: relative;
     display: inline-block;
-    width: 60px;
-    height: 34px;
+    width: 3.2vw;
+    height: 3.5vh;
 }
 
 .slider {
