--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@
 }
 
 .templateContainer {
-    position:fixed;
+    position: fixed;
     margin-top: 20vh;
     margin-bottom: 20vh;
     left: 44.59%;
@@ -64,47 +64,32 @@
     height: 64.25vh;
     border: 1px solid #000;
     overflow: auto;
+    display: flex;
+    justify-content: space-between;
 }
 
-.effectClass {
+.aboutText {
     padding-top: 1vh;
     padding-bottom: 3vh;
 }
 
-/*Style and position of the image banner*/
-.banner1 {
-    height: 40vh;
-    width: 100%;
-    padding-top: 10vh;
-    display: inline-block;
-    background-image: url("../images/weightroom.jpg"), url("../images/cycling.jpg"), url("../images/playerstour.jpg");
-    background-repeat: no-repeat;
-    background-position: left, center, right;
-    background-size: 300px, 300px, 300px;
+.aboutPhotos {
+    width: 32.5%;
+    height: 65%; 
     border: 1px solid #000;
 }
 
-.image-container {
-    width: 55vw; 
-    height: 60vh; 
-    display: flex;
+.projectsPhotos {
+    width: 49%;
+    height: 49%; 
+    padding-bottom: .5vh;
+    border: 1px solid #000;
 }
 
-.image-container img {
-    flex: 1; 
-    object-fit: cover;
-    max-width: 100%; 
-    max-height: 100%; 
-}
-
-/*Style and position of the Resume section*/
-.resumesection {
-    padding-bottom: 15vh;
-    font-size: 20px;
-}
-
-.resumeimg {
-    height: 650px;
+.resumePhotos {
+    width: 24.8vw; 
+    height: 59vh; 
+    border: 1px solid #000;
 }
 
 /*Dynamic response to smaller screen size*/
@@ -170,12 +155,19 @@
     }
 }
 
+.centered-elements {
+    display: flex;
+    flex-direction: column;
+    width: 49vw;
+    text-align: center;
+    border: 1px solid #000;
+}
+
 /* Styles for the text animation */
 .effect1 {
-    text-align: center;
     padding-top: 10vh;
     padding-bottom: 10vh;
-    font-size: 50px;
+    font-size: 5vh;
     animation-name: appear;
     animation-delay: 0.5s;
     animation-duration: 2.5s;
@@ -183,22 +175,16 @@
 }
 
 .effect2 {
-    text-align: center;
     padding-top: 10vh;
     padding-bottom: 10vh;
-    font-size: 50px;
+    font-size: 5vh;
     animation-name: appear;
     animation-duration: 2.5s;
     animation-delay: 1.5s;
     animation-fill-mode: forwards;
 }
 
-.philosophy-1, .philosophy-2 {
-    display: none;
-}
-
 /* Apply common and theme-specific styles */
-
 body {
     background-color: var(--bg-color);
     color: var(--text-color);
